--- a/gracieli.html
+++ b/gracieli.html
@@ -1,2 +1,6 @@
 <header>ALURAFLIX</header>
 <H1>ATRAVÉS DO ARANHA VERSO SUPERA O PRIMEIRO FILME?</H1>
+<p HOMEM ARANHA</p>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=S8z79o9krEAoVE0d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    
